; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_compobj.c_apartment_find_mta.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_compobj.c_apartment_find_mta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@csApartment = common dso_local global i32 0, align 4
@MTA = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @apartment_find_mta to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @apartment_find_mta() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @EnterCriticalSection(i32* @csApartment)
  %3 = load i32*, i32** @MTA, align 8
  store i32* %3, i32** %1, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @apartment_addref(i32* %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = call i32 @LeaveCriticalSection(i32* @csApartment)
  %10 = load i32*, i32** %1, align 8
  ret i32* %10
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @apartment_addref(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
